# orders_ms

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 71067874e71d_create_orders_table.py
app/: main.py
app/api/dependencies/: database.py  http_client.py  orders.py  security.py
app/api/endpoints/: orders.py
app/core/: config.py
app/db/: session.py
app/models/: order.py
app/repositories/: db.py  orders.py
app/schemas/: order.py
app/services/: orders.py
