[project]
name = "orders-ms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "pydantic-extra-types>=2.11.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
]
