[project]
name = "orders-ms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "phonenumbers>=9.0.25",
    "psycopg>=3.3.3",
    "pydantic-extra-types>=2.11.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
]
